Adding dragon page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a id="dragon-curve" class="anchor" href="#dragon-curve" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dragon curve</h3>
 
-<p><img src="https://github.com/Qeole/D3play/blob/master/previews/dragon.png%20=400x" alt="Dragon curve screenshot">
+<p><img src="https://github.com/Qeole/D3play/blob/master/previews/dragon.png" alt="Dragon curve screenshot">
 A Dragon curve generated dynamically. <a href="dragon.html">Go to page</a></p>
         </article>
       </div>
