--- a/dragon.html
+++ b/dragon.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Dragon curve</title>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
   </head>
   <body>
 
@@ -20,8 +20,7 @@
         margin-top: 10px;
       }
       span {
-        margin-right: 50px;
-        min-width: 50px;
+        margin-right : 50px;
       }
       a {
         color: deepskyblue;
