--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <h3>
 <a id="dragon-curve" class="anchor" href="#dragon-curve" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dragon curve</h3>
 
-<p><img src="https://raw.githubusercontent.com/Qeole/D3play/master/previews/dragon.png" alt="Dragon curve screenshot">
-A Dragon curve generated dynamically. <a href="dragon.html">Go to page</a></p>
+<p><img src="https://raw.githubusercontent.com/Qeole/D3play/master/previews/dragon.png" alt="Dragon curve screenshot"></p>
+<p>A Dragon curve generated dynamically. <a href="dragon.html">Go to page</a></p>
         </article>
       </div>
     </div>
